# ArvoreBinaria

./: AlgoritimoArvoreExplicado.txt  CMakeLists.txt  README.md
header/: Arvore.h
src/: main.cpp
